# OooapI

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.org  CONTRIBUTING.org  LICENSE  Makefile  README.org  dune  dune-project  notes.org  oooapi.opam  oooapi_lib.opam  openapi_spec.opam
.github/workflows/: main.yml
json_schema/: dune  json_schema.atd  json_schema.ml
lib/: astUtil.ml  dAG.ml  dAG.mli  dune  http_spec.ml  ocaml_of_json_schema.ml  ocaml_of_json_schema.mli  oooapi.ml  oooapi_lib.ml
oooapi_lib/: dune  oooapi_lib.ml
openapi_spec/: README.org  adapter.ml  atd-mode.el  dune  json.ml  json_schema_converter.ml  openapi.atd  openapi_j.ml  openapi_j.mli  openapi_path.ml  openapi_spec.ml  openapi_spec.mli  openapi_t.mli  openapi_v.ml  openapi_v.mli
test/: README.org  dune  test_dag.ml  test_http_spec.ml  test_oooapi_gen.ml  test_parse_openai_spec.ml  test_parse_openapi_spec.ml  tests.ml
test/cli-blackbox/: cli.t  dune  run.t
test/cli-blackbox.t/: dune  run.t
test/expect/: dune  http_spec_tests.ml
test/github-blackbox.t/: dune
test/github-gen/: dune  github_api_test.ml  run.t
test/openai-blackbox/: dune
test/openai-blackbox.t/: dune  openapi-openai.json  run.t  test_openai.ml
test/openapi-gen/: CONTRIBUTING.org  dune  openapi-openai.json  run.t  run.t.bak  test_openai.ml
test/openapi-gen.t/: dune  main.ml  run.t
test/stripe-blackbox.t/: run.t
