(library
 (name json_schema)
 (libraries atdgen))

(rule
 (targets json_schema_j.ml
          json_schema_j.mli)
 (deps    json_schema.atd)
 (action  (run atdgen -j -j-std %{deps})))

(rule
 (targets json_schema_t.ml
          json_schema_t.mli)
 (deps    json_schema.atd)
 (action  (run atdgen -t %{deps})))
