(rule
 (target tictactoe_api.ml)
 (deps %{bin:oooapi}
       (:spec tictactoe.json))
 (action
  (with-stdout-to %{target}
    (run oooapi %{spec}))))

(library
 (name tictactoe_api)
 (libraries yojson
            cohttp-lwt-unix
            multipart_form
            multipart_form-lwt
            multipart_form-cohttp-lwt
            uuidm
            oooapi_lib)
 (preprocess (pps ppx_deriving_yojson ppx_deriving.make)))
