(rule
 (alias githubgen)
 (deps %{bin:oooapi}
       (:spec ghec.json))
 (action
  (progn

   ; Generate the client code
   (with-stdout-to github_api.gen.ml
    (run oooapi %{spec}))

   ; Format the code
   (run ocamlformat --inplace github_api.gen.ml)

   ; Move the code into the source tree
   (diff? github_api.ml github_api.gen.ml))))

(tests
 (names github_api_test)
 (libraries oooapi_lib)
 (preprocess (pps ppx_deriving_yojson ppx_deriving.make)))
