(rule
 (target openai_api.ml)
 (deps %{bin:oooapi}
       (:spec openapi-openai.json))
 (action
  (with-stdout-to %{target}
    (run oooapi %{spec}))))

(library
 (name openai_api)
 (modules openai_api)
 (libraries oooapi_lib)
 (preprocess (pps ppx_deriving_yojson ppx_deriving.make)))

(executable
 (public_name test_openai)
 (modules test_openai)
 (libraries openai_api cohttp-lwt-unix))
