(library
 (name openai_api)
 (modules openai_api)
 (libraries yojson
            cohttp-lwt-unix)
 (preprocess (pps ppx_deriving_yojson ppx_deriving.make)))

(rule
 (target openai_api.ml)
 (deps %{bin:oooapi} openapi-openai.json)
 (action
  (progn
   (with-stdout-to openai_api.ml (run oooapi openapi-openai.json)))))

(executable
 (name test_openai)
 (modules test_openai)
 (libraries openai_api cohttp-lwt-unix))
