; TODO: Generate as part of portable component
(library
 (name openai_api)
 (modules openai_api)
 (libraries yojson
            cohttp-lwt-unix
            multipart_form
            multipart_form-lwt
            multipart_form-cohttp-lwt
            uuidm)
 (preprocess (pps ppx_deriving_yojson ppx_deriving.make)))

(rule
 (target openai_api.ml)
 (deps %{bin:oooapi}
       (:openai openapi-openai.json))
 (action
  (with-stdout-to %{target}
    (run oooapi %{openai}))))

(executable
 (name test_openai)
 (modules test_openai)
 (libraries openai_api cohttp-lwt-unix))

(cram
 (deps ./test_openai.exe)
 ;; we don't want to run this test in CI because it eats OpenAPI credits
 (enabled_if %{env:OOOAPI_LOCAL_TEST=false})
 )
